Git Commit: yelp api setup and unknown issue with firebase login

--- a/app/src/main/res/layout/createnew.xml
+++ b/app/src/main/res/layout/createnew.xml
@@ -44,7 +44,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp">
         <EditText
-            android:id="@+id/password"
+            android:id="@+id/password1"
             android:layout_width="match_parent"
             android:layout_height="65dp"
             android:hint="Enter Password"
