--- a/app/src/main/res/layout/dashboard.xml
+++ b/app/src/main/res/layout/dashboard.xml
@@ -5,20 +5,27 @@
     android:orientation="vertical"
     android:gravity="center"
     >
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#0445D1"
         android:text="Primary dashboard setup"
-        android:textSize="20dp"
-        />
+        android:textColor="#0445D1"
+        android:textSize="20dp" />
+    <TextView
+        android:id="@+id/text_view_result"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textSize="30dp"
+        android:textColor="#ff0000"/>
     <Button
         android:id="@+id/logout"
-        android:layout_width="200dp"
+        android:layout_width="123dp"
         android:layout_height="60dp"
         android:layout_marginTop="60dp"
         android:text="Sign Out"
-        android:textSize="20dp"
-        android:textAllCaps="false"/>
+        android:textAllCaps="false"
+        android:textSize="20dp" />
 
 </LinearLayout>
